@@ -22,6 +22,7 @@ Bug fixes:
 Enhancements:
 - #7143 Ability to stop Synergy on the login screen
 - #7157 Synergy Business accepts only business licenses
+- #7188 Synergy Basic\Pro accepts business licenses
 - #7166 Replace language notifications with warnings in logs
 - #7181 Fedora 36 support to CI system
 
